--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="chris_evans">Chris\nEvans</string>
     <string name="mark_ruffalo">Mark\nRuffalo</string>
     <string name="chris_hemsworth">Chris Hemsworth</string>
+    <string name="movies_list_top_title">Movies list</string>
+    <string name="movie_list_avengers_tags">Action, Adventure, Drama</string>
+    <string name="movie_avengers_item_title">Avengers: End Game</string>
+    <string name="movie_avengers_item_time">137 min</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="imageDescription">shotImage</string>
 </resources>
