--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="details_avengers_title">Avengers:\nEnd Game</string>
     <string name="details_category_title">Action, Adventure, Fantasy</string>
     <string name="details_storyline">Storyline</string>
-    <string name="storyline_body_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="storyline_body_avengers">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="storyline_body_tenat">"An unnamed CIA agent, the "Protagonist", participates in an undercover operation at a Kyiv opera house. He is aided by a masked soldier with a distinctive trinket, who appears to "un-fire" a bullet through a hostile gunman. After seizing a strange artifact, the Protagonist is captured by mercenaries. He endures torture before consuming a cyanide pill. He awakens to learn the pill was a test of his loyalty; his team has been killed and the artifact lost."</string>
     <string name="detail_cast">Cast</string>
     <string name="robert_downey_jr">Robert Downey Jr.</string>
     <string name="chris_evans">Chris\nEvans</string>
@@ -14,7 +15,7 @@
     <string name="movie_list_avengers_tags">Action, Adventure, Drama</string>
     <string name="movie_avengers_item_title">Avengers: End Game</string>
     <string name="movie_avengers_item_time">137 min</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="imageDescription">shotImage</string>
+    <string name="restriction_13">13+</string>
 </resources>
